--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html class="h-full" lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/qrc-generator-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>QR Generator - Gerador de código QR</title>
   </head>
   <body class="h-full bg-[#fee1c1]">
     <div id="root"></div>
